--- a/edit-profile.html
+++ b/edit-profile.html
@@ -295,7 +295,7 @@
               <label for="bio" class="center">Your bio</label>
               <input type="email" name="email" id="email" hidden>
               <textarea name="bio1" id="bio1" cols="30"
-                rows="10">Your bio is a summary of yourself. It should be no more than 160 characters in length.</textarea>
+                rows="10" required>Your bio is a summary of yourself. It should be no more than 160 characters in length.</textarea>
               <span class="status">First name is required</span>
             </div>
           </div>
@@ -332,6 +332,35 @@
       </div>
     </section>
   </main>
+  <script>
+    const image = document.querySelector('.image-preview-container input')
+    console.log(image);
+    if (image) {
+      image.addEventListener('change', (event) => {
+      console.log('Changed')
+      // Get the selected files.
+       const imageFiles = event.target.files;
+
+          // Count the number of files selected.
+          const imageFilesLength = imageFiles.length;
+
+          //If at least one image is selected, then proceed to display the preview.
+          if (imageFilesLength > 0) {
+            // Get the image path.
+            const imageSrc = URL.createObjectURL(imageFiles[0]);
+
+            // Select the image preview element.
+            const imagePreviewElement = document.querySelector("#preview-selected-image");
+
+            // Assign the path to the image preview element.
+            imagePreviewElement.src = imageSrc;
+
+            // Show the element by changing the display value to "block".
+            imagePreviewElement.style.display = "block";
+          }
+        });
+    }
+  </script>
 </body>
 
 </html>
