--- a/edit-profile.html
+++ b/edit-profile.html
@@ -168,7 +168,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16px" height="16px" viewBox="0 0 512 512">
               <path d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z" />
             </svg>
-            <span class="text">Email</span>
+            <span class="text">Your email</span>
           </a>
         </li>
         <li class="tab-item">
@@ -252,7 +252,7 @@
       </ul>
     </section>
     <section class="content">
-      <div class="profile name-form">
+      <!-- <div class="profile name-form">
         <div class="top">
           <h4 class="title">Your name</h4>
           <p class="desc">
@@ -335,8 +335,8 @@
         <div class="top">
           <h4 class="title">Your socials</h4>
           <p class="desc">
-            Your name is how people will find you on the platform. You can use your real name or a nickname.
-            Both first and last name fields can't be empty.
+            Your socials are how people will connect with you outside the platform. You can add your email, twitter, linkedin, and x
+            accounts.
           </p>
         </div>
         <form class="fields initial" id="name-form">
@@ -398,6 +398,100 @@
             </button>
           </div>
         </form>
+      </div> -->
+      <!-- <div class="profile email-form">
+        <div class="top">
+          <h4 class="title">Your email</h4>
+          <p class="desc">
+            Your email is how you will recover your account in case you forget your password. You can also use it to log in, reset your password, and receive notifications.
+          </p>
+        </div>
+        <form class="fields email" id="email-form">
+          <div class="field email">
+            <div class="input-group email">
+              <label for="email" class="center">Your email</label>
+              <input type="email" name="email" id="email" placeholder="e.g john@example.com" />
+              <span class="status">Email is required</span>
+            </div>
+          </div>
+          <div class="actions">
+            <button type="submit" class="action next">
+              <span class="text">Update email</span>
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="profile password-form">
+        <div class="top">
+          <h4 class="title">Password</h4>
+          <p class="desc">
+            Your password is how you will log in to your account. You can change your password using the form below. You're required to enter your current password, then your new password.
+          </p>
+        </div>
+        <form class="fields password" id="password-form">
+          <div class="field password">
+            <div class="input-group current-password">
+              <label for="current-password" class="center">Current password</label>
+              <input type="password" name="current-password" id="current-password" placeholder="Enter your current password" />
+              <span class="status">Current password is required</span>
+            </div>
+            <div class="input-group new-password">
+              <label for="new-password" class="center">New password</label>
+              <input type="password" name="new-password" id="new-password" placeholder="Enter your new password" />
+              <span class="status">New password is required</span>
+            </div>
+            <div class="input-group confirm-password">
+              <label for="confirm-password" class="center">Confirm password</label>
+              <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm your new password" />
+              <span class="status">Confirm password is required</span>
+            </div>
+          </div>
+          <div class="actions">
+            <button type="submit" class="action next">
+              <span class="text">Update password</span>
+            </button>
+          </div>
+        </form>
+      </div> -->
+      <div class="activity">
+        <div class="top">
+          <h4 class="title">Your activity</h4>
+          <p class="desc">
+            Your activity is a summary of your interactions on the platform. You can view your stories, opinions and likes/upvotes. You can also view your bookmarks and saved stories.
+          </p>
+        </div>
+
+
+        <div class="actions">
+          <ul id="tab" class="tab">
+            <li data-element="stories" class="tab-item details active">
+              <span class="text">Stories</span>
+            </li>
+            <li data-element="saved" class="tab-item saved">
+              <span class="text">Saved</span>
+            </li>
+            <li data-element="upvotes" class="tab-item upvotes">
+              <span class="text">Upvotes</span>
+            </li>
+            <li data-element="topic" class="tab-item topics">
+              <span class="text">Topics</span>
+            </li>
+            <span class="line"></span>
+          </ul>
+        </div>
+
+        <div class="activities stories">
+          <div class="story">
+            <div class="content">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                <path
+                  d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
+                </path>
+              </svg>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
