--- a/edit-profile.html
+++ b/edit-profile.html
@@ -453,14 +453,13 @@
           </div>
         </form>
       </div> -->
-      <div class="activity">
+      <!-- <div class="activity">
         <div class="top">
           <h4 class="title">Your activity</h4>
           <p class="desc">
             Your activity is a summary of your interactions on the platform. You can view your stories, opinions and likes/upvotes. You can also view your bookmarks and saved stories.
           </p>
         </div>
-
 
         <div class="actions">
           <ul id="tab" class="tab">
@@ -475,9 +474,6 @@
             </li>
             <li data-element="upvotes" class="tab-item upvotes">
               <span class="text">Upvotes</span>
-            </li>
-            <li data-element="topic" class="tab-item topics">
-              <span class="text">Topics</span>
             </li>
             <span class="line"></span>
           </ul>
@@ -660,6 +656,32 @@
           </div>
         </div>
 
+      </div> -->
+
+      <div class="activity stats">
+        <div class="top">
+          <h4 class="title">Your stats</h4>
+          <p class="desc">
+            Your stats are a summary of your interactions on the platform. You can view your stories, opinions and likes/upvotes. You can also view your bookmarks and saved stories.
+          </p>
+        </div>
+        <div class="actions">
+          <ul id="tab" class="tab">
+            <li data-element="stories" class="tab-item all active">
+              <span class="text">All</span>
+            </li>
+            <li data-element="stories" class="tab-item stories">
+              <span class="text">Stories</span>
+            </li>
+            <li data-element="saved" class="tab-item opinions">
+              <span class="text">Opinions</span>
+            </li>
+            <li data-element="upvotes" class="tab-item users">
+              <span class="text">Users</span>
+            </li>
+            <span class="line"></span>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
