User dashboard: Entry A04

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -60,6 +60,11 @@
     import StatOpinion from "./js/stats/stat.opinion.js";
     import ActivityItem from "./js/stats/activity.item.js"
 
+    import FormName  from "./js/forms/name.form.js";
+    import FormBio from "./js/forms/bio.form.js";
+    import FormProfile from "./js/forms/profile.form.js";
+    import FormSocial from "./js/forms/social.form.js";
+
 
     customElements.define('app-home', AppHome);
     customElements.define('app-post', AppPost);
@@ -99,6 +104,11 @@
     customElements.define('stat-story', StatStory);
     customElements.define('stat-opinion', StatOpinion);
     customElements.define('activity-item', ActivityItem);
+
+    customElements.define('name-form', FormName);
+    customElements.define('bio-form', FormBio);
+    customElements.define('profile-form', FormProfile);
+    customElements.define('social-form', FormSocial);
   </script>
 </head>
 
@@ -271,153 +281,20 @@
       </ul>
     </section>
     <section class="content">
-      <div class="profile name-form">
-        <div class="top">
-          <h4 class="title">Your name</h4>
-          <p class="desc">
-            Your name is how people will find you on the platform. You can use your real name or a nickname.
-            Both first and last name fields can't be empty.
-          </p>
-        </div>
-        <form class="fields initial" id="name-form">
-          <div class="field bio">
-            <div class="input-group firstname">
-              <label for="firstname" class="center">First name</label>
-              <input data-name="firstname" type="text" name="firstname" id="firstname" placeholder="Enter your first name"
-               value="Fredrick" required>
-              <span class="status">First name is required</span>
-            </div>
-            <div class="input-group lastname">
-              <label for="lastname" class="center">Last name</label>
-              <input data-name="lastname" type="text" name="lastname" id="lastname" value="Ochieng" placeholder="Enter your last name" required>
-              <span class="status">Last name is required</span>
-            </div>
-          </div>
-          <div class="actions">
-            <button type="submit" class="action next">
-              <span class="text">Update name</span>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="profile bio-form">
-        <div class="top">
-          <h4 class="title">Your bio</h4>
-          <p class="desc">
-            Your bio is a brief summary of yourself. It should be no more than 160 characters in length.
-            Use this space to highlight your interests, skills, or any other relevant information about yourself.
-          </p>
-        </div>
-        <form class="fields bio" id="bio-form">
-          <div class="field your-bio">
-            <div class="input-group your-bio">
-              <label for="bio" class="center">Your bio</label>
-              <input type="email" name="email" id="email" hidden>
-              <textarea name="bio1" id="bio1" cols="30"
-                rows="10" required>Your bio is a summary of yourself. It should be no more than 160 characters in length.</textarea>
-              <span class="status">First name is required</span>
-            </div>
-          </div>
-          <div class="actions">
-            <button type="submit" class="action next">
-              <span class="text">Update bio</span>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="profile picture-form">
-        <div class="top">
-          <h4 class="title">Your profile</h4>
-          <p class="desc">
-            Your profile picture is how people will recognize you on the platform. You can use a photo of yourself or an
-            avatar.
-            The image should be square and at least 200x200 pixels in size.
-          </p>
-        </div>
-        <form class="fields picture">
-          <div class="image-preview">
-            <label for="profile-image">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
-                <path d="M11.013 1.427a1.75 1.75 0 0 1 2.474 0l1.086 1.086a1.75 1.75 0 0 1 0 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 0 1-.927-.928l.929-3.25c.081-.286.235-.547.445-.758l8.61-8.61Zm.176 4.823L9.75 4.81l-6.286 6.287a.253.253 0 0 0-.064.108l-.558 1.953 1.953-.558a.253.253 0 0 0 .108-.064Zm1.238-3.763a.25.25 0 0 0-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 0 0 0-.354Z"></path>
-              </svg>
-            </label>
-            <input type="file" id="profile-image" accept="image/*" />
-          </div>
-          <div class="actions">
-            <button type="submit" class="action next">
-              <span class="text">Update profile</span>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="profile name-form">
-        <div class="top">
-          <h4 class="title">Your socials</h4>
-          <p class="desc">
-            Your socials are how people will connect with you outside the platform. You can add your email, twitter, linkedin, and x
-            accounts.
-          </p>
-        </div>
-        <form class="fields initial" id="name-form">
-          <div class="field bio">
-            <div class="input-group email">
-              <span class="wrapper">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
-                    <path d="M1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25v-8.5C0 2.784.784 2 1.75 2ZM1.5 12.251c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V5.809L8.38 9.397a.75.75 0 0 1-.76 0L1.5 5.809v6.442Zm13-8.181v-.32a.25.25 0 0 0-.25-.25H1.75a.25.25 0 0 0-.25.25v.32L8 7.88Z"></path>
-                  </svg>
-                </span>
-                <input type="email" name="email" id="email" placeholder="e.g john@example.com" required>
-              </span>
-            </div>
-            <div class="input-group x">
-              <span class="wrapper">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
-                    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z" />
-                  </svg>
-                </span>
-                <input type="text" name="x" id="x" placeholder="Your X(twitter) username" required>
-              </span>
-            </div>
-            <div class="input-group linkedin">
-              <span class="wrapper">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-                  </svg>
-                </span>
-                <input type="text" name="linkedin" id="linkedin" placeholder="Your linkedin username" required>
-              </span>
-            </div>
-            <div class="input-group threads">
-              <span class="wrapper">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-threads" viewBox="0 0 16 16">
-                    <path d="M6.321 6.016c-.27-.18-1.166-.802-1.166-.802.756-1.081 1.753-1.502 3.132-1.502.975 0 1.803.327 2.394.948s.928 1.509 1.005 2.644q.492.207.905.484c1.109.745 1.719 1.86 1.719 3.137 0 2.716-2.226 5.075-6.256 5.075C4.594 16 1 13.987 1 7.994 1 2.034 4.482 0 8.044 0 9.69 0 13.55.243 15 5.036l-1.36.353C12.516 1.974 10.163 1.43 8.006 1.43c-3.565 0-5.582 2.171-5.582 6.79 0 4.143 2.254 6.343 5.63 6.343 2.777 0 4.847-1.443 4.847-3.556 0-1.438-1.208-2.127-1.27-2.127-.236 1.234-.868 3.31-3.644 3.31-1.618 0-3.013-1.118-3.013-2.582 0-2.09 1.984-2.847 3.55-2.847.586 0 1.294.04 1.663.114 0-.637-.54-1.728-1.9-1.728-1.25 0-1.566.405-1.967.868ZM8.716 8.19c-2.04 0-2.304.87-2.304 1.416 0 .878 1.043 1.168 1.6 1.168 1.02 0 2.067-.282 2.232-2.423a6.2 6.2 0 0 0-1.528-.161" />
-                  </svg>
-                </span>
-                <input type="text" name="threads" id="threads" placeholder="Your threads username" required>
-              </span>
-            </div>
-            <div class="input-group threads">
-              <span class="wrapper">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"  fill="currentColor"  width="16" height="16">
-                    <path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path>
-                  </svg>
-                </span>
-                <input type="url" name="link" id="link" placeholder="Your website or a link" required>
-              </span>
-            </div>
-          </div>
-          <div class="actions">
-            <button type="submit" class="action next">
-              <span class="text">Update socials</span>
-            </button>
-          </div>
-        </form>
-      </div>
+      <name-form  method="PATCH" url="/user/edit/name" api-url="/api/v1/u/edit/name"
+        first-name="John" last-name="Doe">
+      </name-form>
+      <bio-form method="PATCH" url="/user/edit/bio" api-url="/api/v1/u/edit/bio"
+        bio="Your bio is a summary of yourself. It should be no more than 160 characters in length.">
+      </bio-form>
+      <profile-form method="PATCH" url="/user/edit/profile" api-url="/api/v1/u/edit/profile"
+        profile-image="/img/img.jpg">
+      </profile-form>
+
+      <social-form method="PATCH" url="/user/edit/socials" api-url="/api/v1/u/edit/socials"
+       email="isfescii@gmail.com" x="fescii" threads="null" linkedin="fescii" link="https://femar.me">
+      </social-form>
+
       <div class="profile email-form">
         <div class="top">
           <h4 class="title">Your email</h4>
@@ -818,33 +695,6 @@
       </div>
     </section>
   </main>
-  <script>
-    const previewContainer =  document.querySelector('.image-preview')
-
-    if (previewContainer) {
-      const image = previewContainer.querySelector('input[type="file"]');
-      image.addEventListener('change', (event) => {
-      // console.log('Changed')
-      // Get the selected files.
-       const imageFiles = event.target.files;
-
-          // Count the number of files selected.
-          const imageFilesLength = imageFiles.length;
-
-          //If at least one image is selected, then proceed to display the preview.
-          if (imageFilesLength > 0) {
-            // Get the image path.
-            const imageSrc = URL.createObjectURL(imageFiles[0]);
-
-            // console.log(imageSrc);
-
-            //  Add the image as background image.
-            previewContainer.style.backgroundImage = `url(${imageSrc})`;
-
-          }
-        });
-    }
-  </script>
 </body>
 
 </html>
