--- a/edit-profile.html
+++ b/edit-profile.html
@@ -72,6 +72,7 @@
     import FormPassword from "./js/forms/password.form.js";
 
     import ActivityContainer from "./js/containers/activity.container.js";
+    import StatContainer from "./js/containers/stat.container.js";
     import ActivityFeed from "./js/feeds/activity.feed.js";
     import StatFeed from "./js/feeds/stat.feed.js";
 
@@ -127,6 +128,7 @@
     customElements.define('password-form', FormPassword);
 
     customElements.define('activity-container', ActivityContainer);
+    customElements.define('stat-container', StatContainer);
     customElements.define('activity-feed', ActivityFeed);
     customElements.define('stat-feed', StatFeed);
   </script>
@@ -326,50 +328,9 @@
         api-users="/api/v1/u/activity/users" api-saved="/api/v1/u/activity/saved">
       </activity-container>
 
-      <div class="activity stats">
-        <div class="top">
-          <h4 class="title">Your stats</h4>
-          <p class="desc">
-            Your stats are a summary of your interactions on the platform. You can view your stories, opinions and likes/upvotes. You can also view your bookmarks and saved stories.
-          </p>
-        </div>
-        <div class="actions">
-          <ul id="tab" class="tab">
-            <li data-element="stories" class="tab-item all active">
-              <span class="text">All</span>
-            </li>
-            <li data-element="stories" class="tab-item stories">
-              <span class="text">Stories</span>
-            </li>
-            <li data-element="saved" class="tab-item opinions">
-              <span class="text">Opinions</span>
-            </li>
-            <li data-element="upvotes" class="tab-item users">
-              <span class="text">Users</span>
-            </li>
-            <span class="line"></span>
-          </ul>
-        </div>
-        <all-stat date="2021-09-01" date-last="2021-08-01" all="1654757" all-last="1554751" stories="965457" stories-last="995458"
-          opinions="84754" opinions-last="73859">
-        </all-stat>
-
-        <stories-stat date="2021-09-01" date-last="2021-08-01" views="96458" views-last="99457"
-         opinions="84555" opinions-last="73512" upvotes="4557" upvotes-last="3573">
-        </stories-stat>
-
-        <opinions-stat date="2021-09-01" date-last="2021-08-01" views="6543" views-last="9145" opinions="8754"
-          opinions-last="7559" upvotes="456" upvotes-last="593">
-        </opinions-stat>
-
-        <users-stat date="2021-09-01" date-last="2021-08-01" followers="6545" followers-last="9145" subscribers="8755"
-          subscribers-last="7555" donations="9453" donations-last="7587" currency="Ksh">
-        </users-stat>
-
-        <stat-feed api-stories="/api/v1/u/stats/stories"
-          api-opinions="/api/v1/u/stats/opinions">
-        </stat-feed>
-      </div>
+      <stat-container url="/user/stats" api="/api/v1/u/stats" api-stories="/api/v1/u/stats/stories" api-opinions="/api/v1/u/stats/opinions"
+        api-followers="/api/v1/u/stats/followers" api-subscribers="/api/v1/u/stats/subscribers">
+      </stat-container>
     </section>
   </main>
 </body>
